# neurofin

./: .gitignore  CLAUDE.md  README.md  bootstrap.sh  instructions.txt  pyproject.toml  requirements.txt  run_all_subjects_llama8b.sh
scripts/: bench_extraction.py  download_narratives.ps1  setup_windows.ps1
src/neurofin/: __init__.py  config.py  data.py  infer.py  llm_features.py  modeling.py  roi.py  temporal.py  textgrid_utils.py  train.py
src/neurofin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
